# csharpextension

./: .gitignore  NOTES.md  README.md  aot.binlog
NativeLibrary/: Library.cs  Lua.cs  Sdk.cs  libNativeLibrary.csproj
Sdk/: Lua.cs  Sdk.cs
machorepack/: Cargo.toml
machorepack/src/: main.rs
scripts/: compile.sh  compile_external.sh  compile_ios.sh  install_external.sh  run.sh
scripts/win64/: lib
src/: clib.c  clib.h  main.cpp
