[package]
name = "machorepack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9.0"
memmap2 = "0.9.3"
object = { version = "0.32.2", default-features = false, features = ["macho"] }

[build-dependencies]
ar = "0.9.0"
memmap2 = "0.9.3"
object = { version = "0.32.2", default-features = false, features = ["macho"] }
